# asmlib-opencv

src/: CMakeLists.txt
src/demo/: CMakeLists.txt  main.cpp
src/lib/: asmmodel.cpp  asmmodel.h  modelfile.cpp  modelfile.h  modelimage.cpp  modelimage.h  shapemodel.cpp  shapevec.h  similaritytrans.h
tests/: fit_to_image.bat
